assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Raleway:wght@300&display=swap');
* {
	padding: 0;
	margin: 0;
	border: none;
}

body {
	font-family: Raleway, sans-serif;
	color: white;
	background-color: rgb(62, 63, 63);
	letter-spacing: 1px;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	font-size: 110%;
}


/* headings */

h1,
h2 {
	font-family: Nunito, sans-serif;
	text-transform: uppercase;
	color: white;
}

header {
	width: 100%;
	margin-top: 0px;
	position: fixed;
	z-index: 2;
}


/* logo */

#logo1 {
	text-align: center;
	font-size: 250%;
	padding-top: 20px;
	float: left;
	width: 100%;
	background-color: rgb(41, 43, 43);
	color: rgb(176, 179, 11);
	letter-spacing: 12px;
}

#logo2 {
	text-align: center;
	float: left;
	width: 100%;
	font-size: 200%;
	background-color: black;
	letter-spacing: 12px;
}


/* navigation bar */

#navbar {
	font-size: 100%;
	letter-spacing: 2px;
	word-spacing: 10px;
	background-color: rgb(71, 71, 70);
	text-align: center;
	border-bottom: 2px solid rgb(41, 43, 43);
	margin: 10px 0 10px 0;
}

#navbar li {
	list-style-type: none;
	float: none;
	display: inline-block;
	padding: 5px 0 5px 0;
}

#navbar a {
	text-decoration: none;
	color: white;
}

#navbar a:hover {
	color: rgb(176, 179, 11);
}

.active {
	color: rgb(176, 179, 11);
}


/* main image */

#image {
	background: url('../images/pexels-waldemar-brandt-2290070.jpg') no-repeat center center;
	background-size: cover;
	height: 600px;
	width: 100%;
	margin-top: 150px;
}

#image h1 {
	text-align: center;
	padding-top: 290px;
	text-shadow: 2px 2px rgb(0, 0, 0);
}


/* Introduction */

#intro {
	text-align: justify;
	margin-top: 40px;
	margin-bottom: 40px;
	font-size: 1.3em;
	padding: 40px;
}

#intro h3 {
	font-size: 1.3em;
	text-align: center;
	padding: 20px;
}


/* Opening hours and background image*/

#hours {
	width: 100%;
	height: 500px;
	padding-top: 50px;
	text-align: center;
	text-shadow: 2px 2px black;
	font-family: sans-serif;
	list-style-type: none;
	line-height: 60px;
}

#cont-img {
	background: url('../images/pexels-cottonbro-3298637.jpg') no-repeat center center;
	background-size: cover;
	width: 100%;
	height: 600px;
	padding: 10px 0 10px 0;
	font-size: 120%;
	color: white;
}


/* Takeaway text and images */

#takeaway {
	text-align: justify;
	margin-top: 60px;
	font-size: 1.3em;
	padding: 40px;
}

#takeaway h3 {
	font-size: 1.3em;
	text-align: center;
	padding: 20px;
}

#pic1 {
	float: left;
	height: 350px;
	width: 45%;
	margin: 40px 0px 0px 40px;
	padding-left: 20px;
}

#pic2 {
	float: right;
	height: 740px;
	width: 45%;
	margin: 40px 40px 60px 0px;
	padding-right: 20px;
}

#pic3 {
	float: left;
	height: 350px;
	width: 45%;
	margin: 40px 0px 60px 40px;
	padding-left: 20px;
}


/* Contact info */

iframe {
	margin: 20px 0px 40px 120px;
	border: rgb(176, 179, 11) 1px solid;
	padding: 20px;
	width: 80%;
	height: 200px;
}

footer {
	margin-top: auto;
	background-color: rgb(41, 43, 43);
	height: 250px;
	padding-top: 50px;
	padding-left: 15%;
	position: relative;
	z-index: 1;
}

footer h3 {
	text-decoration: underline;
	text-align: left;
}

#time {
	color: rgb(176, 179, 11);
	width: 33.3%;
	float: left;
	width: 30%;
	line-height: 40px;
	list-style-type: none;
	margin: auto;
	padding-left: 3em;
}
#time h3{
	list-style-type: none;
	color:rgb(176, 179, 11);
}

#contact {
	color: rgb(176, 179, 11);
	width: 33.3%;
	width: 30%;
	float: left;
	list-style-type: none;
	line-height: 40px;
}

#socials {
	color: rgb(176, 179, 11);
	width: 30%;
	float: right;
	list-style-type: none;
	line-height: 40px;
	float: right;
}

.fab {
	color: rgb(176, 179, 11);
}

#copyright {
	background-color: rgb(71, 71, 70);
	width: 100%;
	position: absolute;
	bottom: 0px;
	right: 0px;
	text-align: center;
	height: 50px;
}
#copyright p{
	margin-top: 15px;
}


/*about main image*/

#about {
	background: url('../images/pexels-rachel-claire-4819658.jpg') no-repeat center center;
	background-size: cover;
	margin-top: 150px;
	width: 100%;
	height: 600px;
}


/* Our story section*/

.headings {
	text-align: center;
	font-size: 1.5em;
	padding-top: 40px;
}

.statement {
	padding: 20px 40px;
	text-align: justify;
	font-size: 1.3em;
}


/* float mission and feedback paragraph left and right */

#para-left {
	width: 50%;
	float: left;
}

#para-right {
	width: 50%;
	float: right;
}


/* Style form section on about.html */

.form {
	width: 30%;
	height: 500px;
	border: white 1px solid;
	border-radius: 5px 5px;
	padding: 50px;
	margin: 80px auto;
	background-color: rgb(41, 43, 43);
	z-index: 3;
	position: static;

}

.form h3 {
	padding: 10px;
	margin-bottom: 10px;
}

textarea {
	width: 100%;
	padding: 10px;
	margin: 8px 0 20px 0px;
	border: 1px solid black;
	border-radius: 8px;
	box-sizing: border-box;
}

.text {
	width: 100%;
	padding: 10px ;
	margin: 8px 0 20px 0px;
	border: 1px solid black;
	border-radius: 8px;
	box-sizing: border-box;
	color: black;
}

label {
	margin: 8px 0 20px 0px;
	color: white;
	font-size: 1.2em;
}

#button {
	width: 100%;
	background-color: #ff0000;
	color: white;
	padding: 10px;
	margin: 8px 0 40px 0px;
	border: 1px solid white;
	border-radius: 4px 4px;
	cursor: pointer;
}
.text textarea{
	z-index: 8;
	position: relative;
}
/* Style Thank you page text and image */
#thank-you{ 
	text-align: center;
	margin-top: 20px;
}
	
#thank-you h2, h3{
	text-align: center;
	margin-top: 0px;
}
#backimg{
	background-position: center;
	background-size: cover;
	display: block;
	margin-top: 100px;
	border: rgb(176, 179, 11) 2px solid;
  	margin-left: auto;
  	margin-right: auto;
  	width: 50%
}

/* Add style to the menus on menu.html page */

#space {
	margin: 200px 150px 0px 150px;
	background-color: rgba(128, 128, 123, 0.781);
	border-radius: 5px;
}

.space-one {
	margin: 50px 150px 0px 150px;
	background-color: rgba(128, 128, 123, 0.781);
	border-radius: 5px;
}

#space-two {
	margin: 50px 150px 50px 150px;
	background-color: rgba(128, 128, 123, 0.781);
	border-radius: 5px;
}

.our-menus {
	text-align: center;
	background-color: black;
	padding: 15px;
	border-radius: 5px;
}

.our-menus h3 {
	font-size: 1.6em;
}

.left-text {
	width: 35%;
	text-align: justify;
	font-size: 1.3em;
	margin: 100px 0 100px 50px;
	padding-left: 50px;
	float: left;
	text-shadow: 2px 2px black;
	letter-spacing: normal;
}

.right-text{
	width: 30%;
	text-align: justify;
	font-size: 1.3em;
	float: right;
	margin: 100px 50px 100px 0;
	text-shadow: 2px 2px black;
	letter-spacing: normal;
}


/* media queries */
/* large monitors*/
@media screen and (min-width: 1920px) {
	#about{
		height: 1200px;

	}
	.statement,.headings, #intro, #takeaway, #logo1,#logo2{
		font-size: 200%;
	}
	.left-text,.right-text{
		font-size: 200%;
	}
	footer,#hours{
		font-size: 125%;
	}
	footer h3, #contact, #socials, #time {
		font-size: 1.1em;
	}
	nav{
		font-size: 150%;
	}
	#takeaway > h3{
		font-size: 35px;
	}
	#intro > h3{
		font-size: 35px;
	}
	#pic2{
		width: 40%;
		padding-right: 200px;

	}
	#pic3,#pic1{
		width: 35%;
		padding-left: 200px;
		height: 370px;
	}
	#pic3{
		margin-top: 0;
	}
	#copyright{
		font-size: 120%;
	}
	iframe{
		width: 90%;
		margin-left: 80px;
	}
	.our-menus h3{
		font-size: 250%;
	
	}
.form{
	height: 500px;
}
#thank-you{ 
	font-size: 2em;}
	
#thank-you h2, h3{
	font-size: 2em;}
}
/* Large laptop screens */
@media screen and (max-width: 1200px)  {
	.left-text{
		text-align: center;
		float: left;
		margin: auto;
		width: 100%;
		font-size: 1.1em;
		padding: 40px 0 20px 0;
	}
	.right-text{
		text-align: center;
		margin: auto;
		width: 100%;
		float: left;
		clear: both;
		font-size: 1.1em;
		padding: 0 0 40px 0;
	}
	#pic1{
		width: 40%;
		}
		#pic2{
		width: 40%; 
		}
		#pic3{
		width: 40%;
		}
		.form{
			width: 50%;
			height: 450px;
		}
	
		iframe{
			margin-left: 80px;
		}
}
/* Tablets medium size screens */
@media screen and (max-width: 993px){
		footer {
			height: 650px;
		}
		footer h3 {
			text-align: center;
		}
		#contact {
			float: left;
			text-align: center;
			width: 85%;
			padding-top: 35px;
		}
		#time {
			float: left;
			clear: both;
			text-align: center;
			padding: 0;
			width: 85%;
			padding-top: 35px;

		}
		#socials {
			float: left;
			clear: both;
			text-align: center;
			width: 85%;
			bottom: 40px;
			padding-top: 35px;

		}
		#para-left {
			float: left;
			width: 100%;
		}
		#para-right {
			float: left;
			clear: both;
			padding: 0;
			width: 100%;
		}
		.form {
			width: 50%;
			height: 450px;
		}
		.form h3 {
			width: 80%;
			margin: 0 0 10px 50px;
			padding: 0;
		}
		iframe{
			margin: 0 10px 20px 20px;
			width: 90%;
		}
		#backimg{
			width: 70%;
		}
}
/* Mobile devices for smaller screens */
@media screen and (max-width: 600px) {
		#logo1, #logo2 {
			font-size: 1.8em;
		}
		#image{
			height: 510px;
		}
		#intro{
			text-align: center;
			padding: 0 10px 30px 10px;
			margin: 0;
		}
		#takeaway{
			text-align: center;
			padding: 0 10px 30px 10px;
			margin: 0;
		}
		#story p{
			text-align: center;
			padding: 0 20px;
			margin: 0;
		}
		#para-left p{
			text-align: center;
			padding: 0 20px;
			margin: 0;
		}
		#para-right p{
			text-align: center;
			padding: 0 20px; 
			margin: 0;
		}
		#space {
			margin: auto;
			margin-top: 180px;
			width: 100%;
		}
		#space-two {
			margin: auto;
			width: 100%;
		}
		.space-one {
			width: 100%;
			margin: auto;
		}
		#about {
			height: 510px;
		}
		.form {
			width: 65%;
			height: 400px;
		}
		.form h3 {
			width: 100%;
			margin: auto;
			padding: 0 0 10px 0;
			text-align: center;
			
		}
		textarea {
			width: 100%;
			margin: 8px 0 10px 0;
			padding: 12px 20px;
		}
		.text {
			width: 100%;
			margin: 8px 0 20px 0;
			padding: 12px 20px;
		}
		label {
			width: 100%;
			margin: 0;
			padding: 0;
		}
		#button {
			width: 100%;
			padding: 14px 20px;
			margin: 2px 0 10px 0;
		}
		#pic1 {
			width: 100%;
			padding:0;
			margin: 0;
			height: 250px;
		}
		#pic2 {
			float: left;
			clear: both;
			width: 100%;
			padding: 0;
			margin: 0;
			height: 400px;
		}
		#pic3{
			width: 100%;
			padding: 0;
			margin: 0;
			height: 300px;
		}
		iframe{
			width:100%;
			padding: 50px 0 40px 0;
			height: 250px;
			margin: 0;
			border: none;
		}
		
 		#backimg{
			width: 80%;
			margin-top: 200px;
		}
		#thank-you{ 
			margin-top: 20px;
		}
		footer{

			height: 800px;
		}	
		
}
/*smallest screens */
@media screen and (max-width: 300px){
	footer{
		height: 800px;
	} 
}

